--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head></head>
   <body>
-    <video width="200" height="300" src="cover.mp4"></video>
+    <video width="800" height="600" autoplay loop  src="cover.mp4"></video>
   </body>
 </html>
